# flask-dotprof

./: .gitignore  dev-requirements.in  dev-requirements.txt  noxfile.py  pyproject.toml
.github/workflows/: workflow.yml
flask_dotprof/: __init__.py  api.py  extension.py  utils.py
flask_dotprof/frontend/: package-lock.json  package.json
flask_dotprof/frontend/public/: index.html
flask_dotprof/frontend/src/: App.tsx  index.tsx
test_app/: test.py
