[tool.poetry]
name = "flask-dotprof"
version = "1.0.0"
description = "Graphviz-based profile viewer for Flask"
authors = ["Riley Flynn <riley@rileyflynn.me>"]
license = "MIT"
include = ["flask_dotprof/frontend/build/**/*"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
werkzeug = "^1.0.0"
gprof2dot = "^2019.11.30"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
black = "^20.8b1"
mypy = "^0.782"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
isort = "^5.6.1"
nox-poetry = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
